# elearn-program

./: .gitignore  Anchor.toml  package.json
client/: elearn.client.ts
lib/common/: Cargo.toml
lib/common/src/: errors.rs
programs/elearn-program/: Cargo.toml
programs/elearn-program/src/: lib.rs
programs/elearn-program/src/instructions/: add_manager.rs  create_batch.rs  create_certificate.rs  initialize_manager.rs  mod.rs  modify_manager.rs
programs/elearn-program/src/states/: batch.rs  certificate.rs  manager.rs  mod.rs
tests/: elearn-program.ts  elearn.ts
