[package]
name = "elearn"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "elearn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.26"
bitflags = "1.3.2"
thiserror = "1.0.30"
common = {path='../../lib/common'}



